# quackle

./: CMakeLists.txt  README.md  boarddrivenplayer.cpp  boarddrivenplayer.h  computerplayercollection.cpp  datamanager.cpp  lexiconparameters.cpp  main.cpp  quackletest.cpp  sim.cpp  sim.h
bindings/: quackle.i
quacker/: main.cpp  quacker.cpp  settings.cpp
quacker-cli/: CMakeLists.txt  main.cpp
